updates and changes to css, cleaned up the files and added grids. Also added new contact and success pages.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
       </div>
 
       <div id="menu">
-        <a class="active" href="index.html">Home</a>
-        <a href="about.html">The Process</a>
-        <a href="portfolio.html">My Success Stories</a>
+        <a class="active" href="index.html">Home |</a>
+        <a href="about.html">The Process |</a>
+        <a href="portfolio.html">My Success Stories |</a>
+        <a href="contact.html">Contact </a>
       </div>
     </nav>
 
