--- a/portfolio.html
+++ b/portfolio.html
@@ -14,43 +14,44 @@
       </div>
 
       <div id="menu">
-        <a href="index.html">Home</a>
-        <a href="about.html">The Process</a>
-        <a class="active" href="portfolio.html">My Success Stories</a>
+        <a href="index.html">Home |</a>
+        <a href="about.html">The Process |</a>
+        <a class="active" href="portfolio.html">My Success Stories |</a>
+        <a href="contact.html">Contact </a>
       </div>
     </nav>
 
     <main>
-        <h1 id="project-header">Testimonials</h1>
-        <div id="project-container">
-          <section class="project">
-            <h2>"Diamond" Dave Davidson</h2>
-            <div class="project-content">
-              <img class="portfolio-img" src="images/Dave.jpg">
-              <p>
-                "Look, before I met this money maestro, I was selling 'authentic' designer handbags out of my trunk. Now? I'm selling 'authentic' designer yachts out of my marina! Turns out, the secret wasn't the quality of the bags, but the quality of the tax loopholes. Who knew? Thanks to my financial wizard, I'm swimming in more money than a duck in a gold coin fountain. And by the way, those handbags? They were real, just 'pre-owned' by very fast people."
-              </p>
-            </div>
-          </section>
-          <section class="project">
-            <h2>Brenda "The Broker" Buttercup</h2>
-            <div class="project-content">
-              <img class="portfolio-img" src="images/Brenda.jpg">
-              <p>
-                "Oh, honey, my life was a financial desert before I met this cash-conjuring genius. I was trading stocks like I was playing bingo, blindfolded. Now? I'm so rich, I have a guy who has a guy who tastes my caviar to make sure it's sad enough. My secret? It's all about the insider information. And by insider I mean, I have a parrot that can perfectly mimic the CEO of several major corporations. It’s amazing what you can learn when you give a parrot a stock ticker and a bag of crackers."
-              </p>
-            </div>
-          </section>
-          <section class="project">
-            <h2>"Crypto" Carl Crinkle</h2>
-            <div class="project-content">
-              <img class="portfolio-img" src="images/Carl.jpg">
-              <p>
-                "Dude, before I met this financial guru, I was mining crypto in my mom's basement, using her toaster as a server. Now, I'm mining crypto in my own private island, with a supercomputer powered by the tears of liquidated short sellers. The secret? It's all about buying low and selling high. And also, a very good lawyer. And also, knowing how to explain to the IRS that my pet rock is a legitimate digital asset. It's complicated."
-              </p>
-            </div>
-          </section>
-        </div>
-      </main>
+      <h1 id="project-header">Testimonials</h1>
+      <div id="project-container">
+        <section class="project">
+          <h2>"Diamond" Dave Davidson</h2>
+          <div class="project-content">
+            <img class="portfolio-img" src="images/Dave.jpg">
+            <p>
+              "Look, before I met this money maestro, I was selling 'authentic' designer handbags out of my trunk. Now? I'm selling 'authentic' designer yachts out of my marina! Turns out, the secret wasn't the quality of the bags, but the quality of the tax loopholes. Who knew? Thanks to my financial wizard, I'm swimming in more money than a duck in a gold coin fountain. And by the way, those handbags? They were real, just 'pre-owned' by very fast people."
+            </p>
+          </div>
+        </section>
+        <section class="project">
+          <h2>Brenda "The Broker" Buttercup</h2>
+          <div class="project-content">
+            <img class="portfolio-img" src="images/Brenda.jpg">
+            <p>
+              "Oh, honey, my life was a financial desert before I met this cash-conjuring genius. I was trading stocks like I was playing bingo, blindfolded. Now? I'm so rich, I have a guy who has a guy who tastes my caviar to make sure it's sad enough. My secret? It's all about the insider information. And by insider I mean, I have a parrot that can perfectly mimic the CEO of several major corporations. It’s amazing what you can learn when you give a parrot a stock ticker and a bag of crackers."
+            </p>
+          </div>
+        </section>
+        <section class="project">
+          <h2>"Crypto" Carl Crinkle</h2>
+          <div class="project-content">
+            <img class="portfolio-img" src="images/Carl.jpg">
+            <p>
+              "Dude, before I met this financial guru, I was mining crypto in my mom's basement, using her toaster as a server. Now, I'm mining crypto in my own private island, with a supercomputer powered by the tears of liquidated short sellers. The secret? It's all about buying low and selling high. And also, a very good lawyer. And also, knowing how to explain to the IRS that my pet rock is a legitimate digital asset. It's complicated."
+            </p>
+          </div>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
